# cpp-cicd-learning

./: .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
include/math/: calculator.h
src/: main.cpp
src/math/: calculator.cpp
tests/: test_calculator.cpp
